<resources>
    <string name="app_name">MadLevel3Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Url">http://</string>
    <string name="txt_Url">URL</string>
    <string name="Title">Title</string>
    <string name="nothing" />
    <string name="Idk">.</string>
    <string name="Addportal">Add Portal</string>
</resources>